[gd_scene load_steps=7 format=1]

[ext_resource path="res://Level_1.gd" type="Script" id=1]
[ext_resource path="res://Data/Tiles/dirt.xml" type="TileSet" id=2]
[ext_resource path="res://defence_zone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Data/Buildings/infantry.gd" type="Script" id=4]
[ext_resource path="res://Data/Buildings/Barracks.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 40, 20 )

[node name="Level_1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." groups=[
"inanimate",
]]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 20, 20 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 7
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray( -524352, 1, -458816, 1, -524236, 1, -393280, 1, -458700, 1, -327744, 1, -393164, 1, -262208, 1, -327628, 1, -196672, 1, -262092, 1, -131136, 1, -196556, 1, -65600, 1, -131020, 1, -64, 1, -65484, 1, 65472, 1, 65473, 1, 65474, 1, 65475, 1, 65476, 1, 65477, 1, 65478, 1, 65479, 1, 65480, 1, 65481, 1, 65482, 1, 65483, 1, 65484, 1, 65485, 1, 65486, 1, 65487, 1, 65488, 1, 65489, 1, 65490, 1, 65491, 1, 65492, 1, 65493, 1, 65494, 1, 65495, 1, 65496, 1, 65497, 1, 65498, 1, 65499, 1, 65500, 1, 65501, 1, 65502, 1, 65503, 1, 65504, 1, 65505, 1, 65506, 1, 65507, 1, 65508, 1, 65509, 1, 65510, 1, 65511, 1, 65512, 1, 65513, 1, 65514, 1, 65515, 1, 65516, 1, 65517, 1, 65518, 1, 65519, 1, 65520, 1, 65521, 1, 65522, 1, 65523, 1, 65524, 1, 65525, 1, 65526, 1, 65527, 1, 65528, 1, 65529, 1, 65530, 1, 65531, 1, 65532, 1, 65533, 1, 65534, 1, 65535, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 21, 1, 22, 1, 23, 1, 24, 1, 25, 1, 26, 1, 27, 1, 28, 1, 29, 1, 30, 1, 31, 1, 32, 1, 33, 1, 34, 1, 35, 1, 36, 1, 37, 1, 38, 1, 39, 1, 40, 1, 41, 1, 42, 1, 43, 1, 44, 1, 45, 1, 46, 1, 47, 1, 48, 1, 49, 1, 50, 1, 51, 1, 52, 1 )

[node name="player_1_spawn" type="Position2D" parent="."]

transform/pos = Vector2( -1010, -40 )

[node name="player_2_spawn" type="Position2D" parent="."]

transform/pos = Vector2( -870, -40 )

[node name="dzones" type="Node2D" parent="."]

editor/display_folded = true

[node name="defence_zone" parent="dzones" instance=ExtResource( 3 )]

editor/display_folded = true
transform/pos = Vector2( -890, 0 )

[node name="defence_zone1" parent="dzones" instance=ExtResource( 3 )]

editor/display_folded = true
transform/pos = Vector2( -10, 0 )

[node name="defence_zone2" parent="dzones" instance=ExtResource( 3 )]

transform/pos = Vector2( 790, 0 )

[node name="enemy_defence_1" type="Node2D" parent="."]

[node name="infantry" type="Node2D" parent="enemy_defence_1" groups=[
"defence",
]]

editor/display_folded = true
transform/pos = Vector2( 550, 0 )
z/z = -3
script/script = ExtResource( 4 )

[node name="body 1" type="Sprite" parent="enemy_defence_1/infantry"]

transform/pos = Vector2( 30, -20 )
texture = ExtResource( 5 )

[node name="body" type="KinematicBody2D" parent="enemy_defence_1/infantry"]

editor/display_folded = true
transform/pos = Vector2( 30, -20 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_defence_1/infantry/body"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="enemy_defence_1/infantry/body"]

transform/pos = Vector2( -10, 20 )

[node name="infantry2" type="Node2D" parent="enemy_defence_1" groups=[
"defence",
]]

editor/display_folded = true
transform/pos = Vector2( 630, 0 )
z/z = -3
script/script = ExtResource( 4 )

[node name="body 1" type="Sprite" parent="enemy_defence_1/infantry2"]

transform/pos = Vector2( 30, -20 )
texture = ExtResource( 5 )

[node name="body" type="KinematicBody2D" parent="enemy_defence_1/infantry2"]

editor/display_folded = true
transform/pos = Vector2( 30, -20 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_defence_1/infantry2/body"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="enemy_defence_1/infantry2/body"]

transform/pos = Vector2( -10, 20 )

[node name="enemy_defence_2" type="Node2D" parent="."]

[node name="ally_defence" type="Node2D" parent="."]

[node name="infantry3" type="Node2D" parent="ally_defence" groups=[
"defence",
]]

editor/display_folded = true
transform/pos = Vector2( -790, 0 )
z/z = -3
script/script = ExtResource( 4 )

[node name="body 1" type="Sprite" parent="ally_defence/infantry3"]

transform/pos = Vector2( 30, -20 )
texture = ExtResource( 5 )

[node name="body" type="KinematicBody2D" parent="ally_defence/infantry3"]

editor/display_folded = true
transform/pos = Vector2( 30, -20 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="ally_defence/infantry3/body"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="ally_defence/infantry3/body"]

transform/pos = Vector2( -10, 20 )

[node name="infantry1" type="Node2D" parent="ally_defence" groups=[
"defence",
]]

editor/display_folded = true
transform/pos = Vector2( -710, 0 )
z/z = -3
script/script = ExtResource( 4 )

[node name="body 1" type="Sprite" parent="ally_defence/infantry1"]

transform/pos = Vector2( 30, -20 )
texture = ExtResource( 5 )

[node name="body" type="KinematicBody2D" parent="ally_defence/infantry1"]

editor/display_folded = true
transform/pos = Vector2( 30, -20 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="ally_defence/infantry1/body"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="ally_defence/infantry1/body"]

transform/pos = Vector2( -10, 20 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -100.0
margin/right = 200.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false


